# xserve-frontpanel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  com.xserve-frontpanel.daemon.plist  cpu_usage.c  cpu_usage.h  hwmond.c
.github/: workflows
.github/workflows/: build  build.yml  codeql-analysis.yml
modules/: FindLibUSB.cmake
